classDiagram
    class BackgroundService {
        +main()
    }

    class UserExtension {
        +User user
        +TemplateSet default_template_set
        +Currency default_currency
    }

    class DocumentTemplate {
        +String title
        +String template_type
    }

    class TemplateSet {
        +String name
    }

    class Inference {
        +load_model()
        +make_prediction()
    }

    class DummyModel {
        +predict()
    }

    class PostalAddress
    class PhoneAddress
    class EmailAddress
    class Currency

    BackgroundService --|> UserExtension : uses
    BackgroundService --|> Inference : uses
    UserExtension "1" -- "1" TemplateSet : has
    UserExtension "1" -- "1" Currency : has
    Inference --|> DummyModel : uses
    UserExtension "1" -- "0..*" PostalAddress : has
    UserExtension "1" -- "0..*" PhoneAddress : has
    UserExtension "1" -- "0..*" EmailAddress : has